[package]
name = "auracite"
version = "0.1.0"
authors = ["berwyn <berwyn.codeweaver@gmail.com>"]

[dependencies]
dotenv = "0.10.0"
dotenv_macros = "0.10.0"
hyper = "0.10.4"
redis = "0.8.0"
rocket = "0.2.2"
rocket_codegen = "0.2.2"
select = "0.3.0"
serde = "0.9.12"
serde_derive = "0.9.12"
serde_json = "0.9.9"
xml-rs = "0.4.0"
