[package]
authors = ["berwyn <berwyn.codeweaver@gmail.com>"]
name = "auracite"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
dotenv_macros = "0.10.0"
jsonfeed = "0.2.0"
redis = "0.8.0"
reqwest = "0.7.3"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rss = "1.0.0"
rust-crypto = "0.2.36"
select = "0.4.2"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0.3"
xml-rs = "0.6.1"
